v1.4: added MindVisionImmunity buff: protects its target from being seen by MindVision